サインアップ機能を見ていく

--- a/機能毎のコードリーディング/サインアップ機能.md
+++ b/機能毎のコードリーディング/サインアップ機能.md
@@ -1,1 +1,64 @@
 - サインアップ機能
+  - SignUpコンポーネント
+    - 各入力フィールド
+      - name
+      - email
+      - password
+      - passwordConfirmation
+          - 各入力項目が正常に入力できている場合
+            - 送信ボタンが表示される
+    - 送信ボタン
+      - 送信ボタンがクリックされるとクリックイベントが発火する
+        - handleSubmitが実行される
+  - handleSubmit関数
+    - 発火すると非同期処理が走る(async)
+    - 引数にeを受け取る
+      - eの型を定義
+        - React.MouseEvent<HTMLButtonElement>
+          - Reactというnamespaceが定義されている中のinterface(型の定義がまとまっているもの)
+            - MouseEventというinterface
+              - eにはvoid型を示すpreventDefaultを渡す
+    - 変数dataを定義する
+      - createFormData関数
+        - 引数はなし、型はSignUpFormDataが定義されている
+          - name: keyof SignUpData, value: String | Blob, fileName?: string): any
+        - 変数formDataを定義する
+          - interfaceとして定義されているFormDataからインスタンスを作成する
+            - enrties関数を受け取る
+              - keys
+              - values
+          - formDataの末尾に値を追加する
+            - name
+            - email
+            - password
+            - passwordConfirmation
+            - gender
+            - prefecture
+            - birthday
+            - image
+          - returnで自身を返す
+    - try,catchでerrハンドリングを行う
+      - try文
+        - 変数resを定義する
+          - 非同期処理でsignUpに引数として変数dataを渡す
+    - singUpコンポーネント
+      - 引数としてdataを受け取る
+        - 型としてSignUpFormDataを指定する
+          - name: SignUpData
+            - SignUpData　＝＞　append
+              - name: string
+              - email: string
+              - password: string
+              - passwordConfirmation: string
+              - gender: number
+              - prefecture: number
+              - birthday: Date
+              - image: string
+          - value: String | Blob
+            - Blob => interfaceで定義されている
+          - fileName?: string
+      - return 返す処理
+        - client.post("auth", data)
+          - clientで定義したベースURLにpostメソッドでリクエストを送る
+          - client
+            - axiosのcreateメソッド呼び出してAPIを叩く
