サインアップ機能

--- a/機能毎のコードリーディング/サインアップ機能.md
+++ b/機能毎のコードリーディング/サインアップ機能.md
@@ -60,5 +60,13 @@
       - return 返す処理
         - client.post("auth", data)
           - clientで定義したベースURLにpostメソッドでリクエストを送る
-          - client
-            - axiosのcreateメソッド呼び出してAPIを叩く
+            - client
+              - 引数　＝＞　date
+                - baseURL
+                  - http://localhost:3001/api/v1/auth
+                    - createメソッドでリクエストを送る
+    - BE(Rails側)
+      - API(http://localhost:3001/api/v1/auth)が叩かれる
+        - de
+        - namespaceでauthを指定する
+          - sessionsコントローラーのindexアクションを発火する
