サインアップ機能を読み進める

--- a/機能毎のコードリーディング/サインアップ機能.md
+++ b/機能毎のコードリーディング/サインアップ機能.md
@@ -67,6 +67,37 @@
                     - createメソッドでリクエストを送る
     - BE(Rails側)
       - API(http://localhost:3001/api/v1/auth)が叩かれる
-        - de
+        - devise_token_authのヘルパーメソッド
+          - user_registration
+            - POST /auth(.:format)
+              - signup#create
+        - mount_devise_token_auth_forを使ってUserモデルをマウントする
+          - DeviseTokenAuthのRegistrationsControllerを継承したアカウント作成用のコントローラー
+            - sign_up_paramsの設定をparamsから受け取った値で更新する
+              - ヘルパーメソッドを使う
         - namespaceでauthを指定する
           - sessionsコントローラーのindexアクションを発火する
+            - current_api_v1_user => cuurent_user
+              - cuurent_userというヘルパーメソッドを使用するが、ルーティングにおいてnamespaceを切っているのでcurrent_api_v1_userに変更している
+                - current_api_v1_user
+                  - サインインしているユーザーを取得する
+                    - sign_up_paramsにおいてサインアップが完了している場合には
+                      - statusは200
+                      - current_userとしてcurrent_api_v1_userが返ってくる
+    - FE(TS＋React側)に戻る
+      - auth.ts内で定義したsignUpコンポーネントでの処理が実行された後にif文の処理に入る
+        - もし、statusコードが200番台の場合
+          - Cookiesにheaders情報に追加する
+          - setIsSignedInにtrueを渡す
+            - useContextでグローバルに状態管理をする
+              - AuthContext
+                - isSignedInには型としてbooleanを指定
+                  - 真偽値が状態として入る
+                - setIsSignedInには型としてReactモジュールのDispatchを指定する
+                  - Dispatchはvoidを指定する
+                    - SetStateActionを型のジェネリスクとして指定し真偽値を受け取る
+          - setCurrentUserに変数resのdataプロパティのdataプロパティを渡す
+            - useContextで状態管理を行なう
+              - ReactモジュールのDispatch
+                - SetStateActionを型のジェネリスクとして指定しパイプラインでUser or undefinedのどちらかで状態を管理する
+          - histoy
