サインアップ機能を読み切った

--- a/機能毎のコードリーディング/サインアップ機能.md
+++ b/機能毎のコードリーディング/サインアップ機能.md
@@ -86,7 +86,7 @@
                       - current_userとしてcurrent_api_v1_userが返ってくる
     - FE(TS＋React側)に戻る
       - auth.ts内で定義したsignUpコンポーネントでの処理が実行された後にif文の処理に入る
-        - もし、statusコードが200番台の場合
+        - もし、statusコードが200番の場合
           - Cookiesにheaders情報に追加する
           - setIsSignedInにtrueを渡す
             - useContextでグローバルに状態管理をする
@@ -101,3 +101,40 @@
               - ReactモジュールのDispatch
                 - SetStateActionを型のジェネリスクとして指定しパイプラインでUser or undefinedのどちらかで状態を管理する
           - histoy
+            - LocationStateはunknown型になっている
+              - historyではuseHistoryを使うようにする
+                - histoy.push
+                    - 新しいエントリを履歴スタックに追加
+                      - その位置に遷移する
+                        - homeページに遷都する
+                          - そして、homeページをスタック
+          - 各set関数を空白文字に更新する
+          - ターミナルにSigned in successfully!と出力する
+        - もし、もし、statusコードが200番ではない場合
+          - setAlertMessageOpenにtrueを渡す
+            - alertMessageOpenは真偽値で状態を管理している
+              - 初期値はfalseとなっており、状態をtrueに更新
+                - 状態の更新に伴ってuseStateが発火しコンポーネントが更新される
+                  - alertとしてメールアドレスかパスワードが間違っていますが表示される
+      - try,catchでエラーが発生した場合にはcatchでエラーを取得して
+        - コンソールにエラーを出力
+        - setAlertMessageOpenにtrueを渡す
+            - alertMessageOpenは真偽値で状態を管理している
+              - 初期値はfalseとなっており、状態をtrueに更新
+                - 状態の更新に伴ってuseStateが発火しコンポーネントが更新される
+                  - alertとしてメールアドレスかパスワードが間違っていますが表示される
+    - 最終結果として
+      - サインアップに成功している場合にはhomeページへ遷都
+      - サインアップに失敗した場合にはalertメッセージが表示されるようになる
+- 画像データの取り扱い
+  - 画像をアップロードするinputはtypeをfileに指定する
+    - 画像をアップロードした場合
+      - onChange関数が発火する
+        - uploadImage(e)
+          - 発生したイベントを引数に受け取る
+          - 変数fileを定義
+            - e.target.files
+              - 選択したファイルが配列として格納されている
+                - 1番、最初の要素を取得する
+              - setImageでuseStateを使って状態の更新を行う
+        - previewImage(e)
