--- a/機能毎のコードリーディング/サインアップ機能.md
+++ b/機能毎のコードリーディング/サインアップ機能.md
@@ -138,3 +138,12 @@
                 - 1番、最初の要素を取得する
               - setImageでuseStateを使って状態の更新を行う
         - previewImage(e)
+
+- ***コールグラフ***
+  - SignUpコンポーネント
+  
+  　↓
+  - Buttonコンポーネント => onClick => handleSubmit関数
+
+  　↓
+  - 
