コールグラフを作成する

--- a/機能毎のコードリーディング/サインイン機能.md
+++ b/機能毎のコードリーディング/サインイン機能.md
@@ -49,4 +49,49 @@
         - 変数resへの代入
             - コンソールへ変数resを出力する
         - if文の条件を変数resのstatusプロパティが200と等しい場合と定義する
+            - trueの場合
+                - Cookiesに変数resのheaders情報を格納する
+                - setIsSignedInに引数としてtrueを渡す
+                    - useContextでグローバルに状態管理
+                        - AuthContextはtrue or falseを受け取る
+                - setCurrentUserには変数resのdataプロパティのdataプロパティを渡す(current_userの情報)
+                - historyに対してpushメソッドを使いhomeページへの履歴スタックを追加する
+                - 各入力フィールドにset関数で状態管理している状態を空文字を入れる事でクリーンにする
+                - コンソールにSigned in successfully!を出力する
+            - falseの場合にはsetAlertMessageOpenの状態をtrueに変換する => sessionコントローラーでstatus500が返ってきた場合
+                - trueに変換する事でalertMessageが表示されるようになる
+        - catch
+            - err
+                - エラーが発生した場合(サインインに成功しなかった場合) => 
+                    - コンソールにerrを出力
+                    - setAlertMessageOpenにtrueを渡す
+                        - AlertMessageコンポーネントが表示されるようになる
+
+- コールグラフ
+    - FE
+        - SignInコンポーネント
+        - Buttonコンポーネント
+            - TextField(name,email) => onChange関数(setEmail,setPassword)
+            - onClick関数
+                - handleSubmit関数
+                    - async
+                        - preventDefault
+                    - 変数data
+                    - 変数res
+                        - await
+                            - signInコンポーネント
+                                - 引数にdataを渡す
+        - signInコンポーネント
+            - propsとしてdataを受け取る
+                - clientにpostメソッドで"auth/sign_in"でAPIを叩く
+                    - 引数としてdataを渡す
+    - BE
+        - ルーティング
+            - namespace
+                - :api :v1 :auth
+                    - sessionsコントローラーのindexアクションを実行する
+        - sessionsコントローラー
+            - indexアクション
+    - FE
+        - setAlertMessageOpen(true)
             - 
