--- a/機能毎のコードリーディング/ホームページ.md
+++ b/機能毎のコードリーディング/ホームページ.md
@@ -46,8 +46,35 @@
                                 - サインアップの時に登録した誕生日(birthday)を使い年齢を計算するコンポーネント
                             - currentUserAge
                                 - 変数birthdayを定義する
-                                    - currentUserのbirthdayプロパティを受け取り
+                                    - currentUserのbirthdayプロパティを受け取る
+                                    - 受け取った値を文字列に変換する
+                                    - replaceメソッドを使って空白文字と-を入れ替える
+                                - if文 => もし、birthdayの長さが8ではない場合にはreturn(処理を終わらせる)
+                                - 変数dataを定義する
+                                    - Dateクラスのオブジェクトを生成する
+                                - 変数todayを定義する
+                                    - date.getFullYear() => 与えた値の年に相当する部分を返す
+                                    - (date.getMonth() + 1)
+                                        - 与えた値の月に相当する値を0~11の値の中で返す
+                                        - 月で表示したいため+1する
+                                        - .slice(-2)
+                                            - 配列date.getMonthの後ろ2つの要素を取得してシャローコピーする
+                                    - date.getDate()
+                                        - 指定された日付の日を返す
+                                        - .slice(-2)
+                                            - 配列date.getDateの後ろ2つの要素を取得してシャローコピーする
+                                    - 最終的に変数dataは年月日付(計8文字)になる
+                                - Math.floor()
+                                    - 与えられた数値以下の整数を返す
+                                        - 特定の値の整数部分のみを返す
+                                    - 引数には(parseInt(today) - parseInt(birthday) / 10000)を渡す
+                                        - parseInt
+                                            - 指定された値の整数値を返す
+                                                - 年齢の値が求まる
                         - 都道府県情報
+                            - 都道府県情報は数値で管理している
+                                - 登録した時には1~47の値で管理するためのindex番号に+1した
+                                    - そのため表示する際にindex番号を取得する際に-1する事で正しい値を取得する事ができる
                         - 年齢
                         - 自己紹介文
         - サインアウトボタン
