homeコンポーネントを読み切った

--- a/機能毎のコードリーディング/ホームページ.md
+++ b/機能毎のコードリーディング/ホームページ.md
@@ -7,7 +7,6 @@
                 - ユーザー名
                 - 年齢
                 - 都道府県情報
-                - 年齢
                 - 自己紹介文
             - サインアウトボタン
         ![alt text](ホームページ.png)
@@ -23,13 +22,47 @@
                 - currentUser => res.data.data
                     - これらが定義されている状態 => ログイン済みの状態
 
-- histyオブジェクトによってレンダーされる => react-router-dom
+- historyオブジェクトによってレンダーされる => react-router-dom
 
 - homeコンポーネント
     - 表示される内容
-        - 設定ボタン
+        - 設定ボタン(編集機能)
             - IconButtonコンポーネントにラップされたSettingsIcon
-                - IsonButtonにonClick関数が紐づいており、クリックされるとeditFormOpenがopenに変わる
+                - IsonButtonにonClick関数が紐づいており、クリックされるとeditFormOpenがtrueに変わる
+                    - trueに変わるとDialogがopenになりモーダルが表示されるようになる
+            - FormタグにラップされたDialog(モーダル)
+                - editFormOpenがtrueの時に表示される    
+                    - onClose関数にはsetEditFormOpenに初期値がfalseである関数が発火するようになっている
+                - DialogTitle => プロフィールの変更
+                - DialogContent
+                    - TextField => name
+                        - onChange関数が紐づいている
+                    - FormControl
+                        - InputLabelを紐づける
+                            - InputLabelのid部分にはSelectコンポーネントを紐づける
+                                - Select => onChange関数が紐づく
+                                    - 配列prefecturesに対してmap関数を実行したものを表示する
+                                        - keyとvalueに関してはindexに＋１する => 0~46ではなく1~47で表示する
+                    - TextField => 自己紹介
+                        - onChange関数が紐づ
+                    - input => 画像登録するコンポーネント
+                        - onChange
+                            - uploadImage(e)
+                            - previewImage(e)
+                        - previewする画像がある場合には表示する
+                    - DialogActionsコンポーネント
+                        - onClick
+                            - handleSubmit関数が紐づく
+                - handleSubmit
+                    - eventに対してpreventDefaultを呼ぶ
+                        - 変数dataを定義する
+                            - createFormData
+                                - 新しく入力された入力内容を反映する
+                                    - 非同期処理でAPIを叩く
+                                        - もし、statusコードが200で帰ってきたら(成功したら)
+                                            - setEditFormOpenにfalseを渡す(モーダルを閉じる)
+                                            - setCurrentUserにaxiosのレスポンスのuserプロパティを渡す
+                                        - 成功しなかった場合にはコンソールにエラーメッセージを表示する
         - 自身の詳細情報
             - ユーザーが自身で登録した画像
                 - Grid itemコンポーネントでラップされたAvatarコンポーネント
@@ -73,8 +106,50 @@
                                                 - 年齢の値が求まる
                         - 都道府県情報
                             - 都道府県情報は数値で管理している
-                                - 登録した時には1~47の値で管理するためのindex番号に+1した
+                                - 登録した時には1~47の値で管理するためにindex番号に+1した
                                     - そのため表示する際にindex番号を取得する際に-1する事で正しい値を取得する事ができる
-                        - 年齢
                         - 自己紹介文
+                            - currentUser.profileに対して3項演算子である?を使ってprofileプロパティがtrueの場合currentUser.profileを表示するfalseの場合、”よろしくお願いいたします。”を表示する
         - サインアウトボタン
+            - Botton
+                - onClick関数にhandleSignOut関数が紐づいている
+                    - handleSignOut
+                        - asyncで非同期処理が実行される
+                            - evetの型はReactモジュールのinterfaceで定義されているMouseEvent<HTMLButtonElement>
+                        - try,catch文でエラーハンドリングする
+                            - 変数resを定義する
+                                - signOut関数を実行する
+                        - signOut
+                            - clientにdeleteメソッドでauth/sign_outでAPIを叩く
+                            - 第二引数にはヘッダー情報を渡す
+                                - 叩かれるリクエストhttp://localhost:3001/api/v1/auth/sign_out
+        - BE
+            - sessionコントローラーで認証の確認を行う
+        - FE
+            - axios内部でresponseとして返されるデータはこのように定義されている
+            ```JavaScript
+            utils.forEach(['delete', 'get', 'head', 'options'], function forEachMethodNoData(method) {
+            /*eslint func-names:0*/
+            Axios.prototype[method] = function(url, config) {
+                return this.request(mergeConfig(config || {}, {
+                method: method,
+                url: url,
+                data: (config || {}).data
+                }));
+            };
+            });
+            ```
+            - このdataプロパティにsuccesが入ると考える
+                - deletaメソッドでサーバーのリソースの削除に成功した場合
+                    - Cookiesに対してremoveメソッドを実行してデータを削除する
+                    - setIsSignedInにfalseを渡してcontextで管理しているisSignedInをfalseに更新する
+                    - histroyオブジェクトにpush関数を使い、signinを履歴スタックに追加する
+                    - コンソールに"Succeeded in sign out"を出力する
+                - もし、リソースの削除に失敗した場合にはコンソールに"Failed in sign out"を出力する
+            - catch構文でエラーが発生している場合にはコンソールにエラーを出力する
+
+
+- Issue
+    - history.push("/signin")
+        - これがソースコードだとhistroy.push("/signin")になっている
+            - したがってconst history = useHistory()もスペルミスしている
