ユーザー一覧機能を読む

--- a/機能毎のコードリーディング/ホームページ.md
+++ b/機能毎のコードリーディング/ホームページ.md
@@ -148,8 +148,47 @@
                 - もし、リソースの削除に失敗した場合にはコンソールに"Failed in sign out"を出力する
             - catch構文でエラーが発生している場合にはコンソールにエラーを出力する
 
-
 - Issue
     - history.push("/signin")
         - これがソースコードだとhistroy.push("/signin")になっている
             - したがってconst history = useHistory()もスペルミスしている
+
+- コールグラフ
+    - homeコンポーネント
+        - isSignedIn => true
+        - currentUser => true
+            - IconButton
+                - setEditFormOpen
+            - Avatar
+                - src={currentUser?.image.url}
+            - Typography
+                - {currentUser?.name}
+                - {currentUserAge()}
+                - ({currentUserPrefecture()})
+            - currentUser.profile => true if false => nil
+                - Typography
+                    - {currentUser.profile}
+            - Button => サインアウト
+                - handleSignOut
+            - form
+                - open => editFormOpen
+                - onClose => setEditFormOpen()
+                    - TextField
+                        - onChange => setName
+                    - InputLabel
+                        - Select
+                            - MenuItem
+                                - prefecture
+                    - TextField
+                        - onChange
+                    - input
+                        - onChange
+                            - uploadImage(e)
+                            - previewImage(e)
+                    - preview => true
+                        - IconButton => プレビュー表示
+                            - img
+                                - src={preview}
+            - DialogActions
+                - Button
+                    - onClick => handleSubmit
