状態の洗い出し終わり

--- a/機能毎のコードリーディング/ユーザー一覧機能.md
+++ b/機能毎のコードリーディング/ユーザー一覧機能.md
@@ -1,6 +1,28 @@
 - ユーザー一覧機能
     - 表示されている状態・要素など
-        - getメソッドでAPIを叩いて取得した要素をAppコンポーネントへ出力する
+        - CommonLayoutで共通するスタイリングとして
+            - Header
+            - Children
+                - が表示されている
+                    - Headerコンポーネントの状態(switch)に応じてChildrenの表示内容が変化する
+            - Headerコンポーネント
+                - AuthButtonsコンポーネント => 認証情報に応じてボタンの内容を変更する
+                    - !loadingとする事でローディングが終了した後(トークン情報などが読み込まれた後)
+                        - isSignedInがtrueの場合には
+                            - コンポーネントへのIconButtonを表示する
+                        - isSignedInがfalseだった場合には
+                            - サインインコンポーネントへのIconButtonを表示する
+                - 各コンポーネントへのボタンがクリックされるとReact-routerにpathが渡されてる
+                    - AppコンポーネントではPrivateにラップされている
+                        - コンポーネントの表示をする前にPrivate関数が実行される
+                            - !loadong => false
+                                - isSignedIn => true
+                                    - その場合、childrenを表示する
+                                - falseの場合
+                                    - サインインコンポーネントへリダイレクト
+                            - !loadong => trueの場合(ローディング中)
+                                - 何も表示しない
+                    - その後、Childrenコンポーネントが表示される
     - 表示条件
         - AppコンポーネントでCommonLayoutが定義されている
             - その中でSwitchが定義されている
@@ -14,3 +36,7 @@
                         - ChatRooms
                         - ChatRoom
                         - NotFound
+    - 前提条件
+        - usersコンポーネントが表示されている場合
+            - loading => false
+            - isSignedIn => true
