コンポーネントが表示されてからのuseEffectで呼ばれる関数を読む

--- a/機能毎のコードリーディング/ユーザー一覧機能.md
+++ b/機能毎のコードリーディング/ユーザー一覧機能.md
@@ -37,6 +37,73 @@
                         - ChatRoom
                         - NotFound
     - 前提条件
-        - usersコンポーネントが表示されている場合
+        - Usersコンポーネントが表示されている場合
             - loading => false
             - isSignedIn => true
+
+    - ユーザー一覧機能　＝＞　処理の流れ
+        - App.tsx内でusersとしてAPIを叩く：コンポーネントはUsers
+            - path => users
+                - baseURL+users
+                    - index,show,updateが指定される
+        - Usersコンポーネント
+            - useEffect
+                - コンポーネントのレンダリング時にhandleGetUsers()とhandleGetLikes()が実行される
+                    - handleGetUsers() => ユーザー一覧を取得する
+                        - async => 非同期処理
+                            - try,catch
+                                - 変数resを定義する
+                                    - getUsers関数を実行する
+                                        - getUsers
+                                            - HTTPメソッドがGETでAPIを叩く
+                                                - BE
+                                                    - resourcesにおいてGET => indexを示す
+                                                        - usersコントーローラーのindexアクションを発火させる
+                                                            - ローカル変数のusersにUserモデルを介してwhereメソッドを実行する
+                                                                - whereメソッド
+                                                                    - prefecture: current_api_v1_user.prefecture
+                                                                        - まず、prefectureカラムの値が自分の値と同じカラムを全て配列の形にして取得する
+                                                                - whereメソッド＋notメソッド
+                                                                    - id: current_api_v1_user.id
+                                                                        - idカラムの値が同じカラム
+                                                                    - gender: current_api_v1_user.gender
+                                                                        - genderカラムの値が自分と同じカラム
+                                                                            - この2つのカラムを除外する
+                                                                - orderメソッド
+                                                                    - created_atカラムがDESC(降順)になるように並び替える
+                                                            - render
+                                                                - json形式でstatusコード200とusersプラパティの値として変数usersを返す
+                                - コンソールに変数resを出力する
+                                - if文
+                                    - 条件に変数resが存在する場合にはstatusプロパティが200と厳密に等しいか？判断する
+                                        - trueの場合
+                                            - setUsers関数を発火する
+                                                - 引数に変数resのdataプロパティのusersプロパティ(自分以外の同じ県で性別が違うレコードを代入した配列)を渡す
+                                        - falseの場合
+                                            - コンソールにNo usersを出力する
+                            - catch文としてエラーを受け取りコンソールに出力する
+                    - handleGetLikes() => いいね一覧を取得する
+                        - async => 非同期処理
+                            - 変数resにgetLikes関数を実行し代入する
+                                - getLikes関数
+                                    - HTTPメソッドがGETでpathにlikesを渡す
+                                    - headers情報には認証情報を渡す
+                        - BE
+                            - likesコントローラーのindexアクションを実行する
+                                - render json json形式でデータを返す
+                                    - statusプロパティには200
+                                    - active_likesプロパティには
+                                        - current_api_v1_user.active_likes
+                                            - active_likes
+                                                - createメソッドで定義した値
+      passive_likes: current_api_v1_user.passive_likes # 相手からのいいね
+
+            - !loading
+                - trueの場合(ローディングが終了している場合)
+                    - users?.length
+                - fslseの場合(ローディング中の場合)
+                    - 何も表示しない(<></>)
+
+        
+                - FE
+                    - 
