マッチング機能を読み込む

--- a/機能毎のコードリーディング/ユーザー一覧機能.md
+++ b/機能毎のコードリーディング/ユーザー一覧機能.md
@@ -96,14 +96,131 @@
                                         - current_api_v1_user.active_likes
                                             - active_likes
                                                 - createメソッドで定義した値
-      passive_likes: current_api_v1_user.passive_likes # 相手からのいいね
-
+                                    - passive_likesには
+                                        - current_api_v1_user.passive_likes
+                                            - passive_likes
+                                                - createメソッドで定義した値
+                        - FE
+                            - コンソールに変数resを出力する
+                            - if文を条件を変数resのstatusプロパティが厳密に200と等しい場合として
+                                - trueの場合には
+                                    - setLikedUsersにres?.data.activeLikesを渡して状態を更新する
+                                - falseの場合には
+                                    - コンソールにNo likesと出力する
+                            - catch文
+                                - コンソールにエラーを出力する
             - !loading
                 - trueの場合(ローディングが終了している場合)
-                    - users?.length
+                    - useStateで管理しているusersが存在するか？しない場合にはnilを返す、存在する場合にはlengthメソッドを使い配列の長さをチェックして0より大きい場合には三項演算子のtrueの時に表示されるコンポーネントを表示する
+                        - Gridコンポーネント
+                            - 配列usersに対してmap関数を引数にusersとindexを受け取る
+                                - divタグのkeyに引数として受け取ったindexを代入してonClick関数を紐付けづける
+                                    - onClik関数
+                                        - setUser関数
+                                            - 引数にuserを受け取る
+                                        - setUserDetailOpen
+                                            - 引数にtrueを渡す
+                                - Gridコンポーネント => item
+                                    - Avatar
+                                        - src属性にはuser?.image.urlを指定する
+                                    - Typography
+                                        - テキスト表示用のコンポーネント
+                                            - user.nameを表示する
+                    - 三項演算子がfalseの場合
+                        - Typography => テキスト表示用のコンポーネント
+                            - まだ1人もユーザーがいません。 を表示する
                 - fslseの場合(ローディング中の場合)
                     - 何も表示しない(<></>)
-
-        
-                - FE
-                    - 
+            - Dialogコンポーネント(モーダル)
+                - open属性にuserDetailOpenを紐づける
+                - onClose属性
+                    - setUserDetailOpen(false)を紐づける
+                - DialogContentコンポーネント
+                    - Grid container
+                        - Grid item
+                            - Avatar
+                                - src属性
+                                    - user?.image.urlを指定する
+                    - Grid container
+                        - Grid item
+                            - Typography => テキストを表示するコンポーネント
+                                - {user.name}
+                                    - ユーザー名
+                                - {userAge()}歳
+                                    - 年齢
+                                - ({userPrefecture()})
+                                    - 県名を表示する
+                            - Typography
+                                - 自己紹介
+                            - Typography
+                                - userオブジェクトのprofileプロパティ
+                                    - trueの場合には表示
+                                    - falseの場合には"よろしくお願いします。"を表示する
+                    - Grid container
+                        - Button
+                            - onClick関数にisLikedUser関数
+                                - user.idの値がある場合には
+                                    - void(0)
+                                - falseの場合には
+                                    - handleCreateLike(user)
+                            - disabled属性
+                                - isLikedUser関数のuser.idの値が
+                                    - trueの場合はtrue
+                                    - falseの場合にはfalse
+                            - 表示する内容は    
+                                -  isLikedUser関数のuser.idの値が
+                                    - trueの場合はいいね済み
+                                    - falseの場合にはいいね
+            - AlertMessageコンポーネント
+                - open属性にはalertMessageOpenを紐づける
+                - setOpen属性にはsetAlertMessageOpenを紐づける
+- コールグラフ
+    - useEffect
+        - handleGetUsers
+            - getUsers
+                - setUsers
+                    - setLoading
+        - handleGetLikes
+            - getLikes
+                - setLikedUsers
+    - Userコンポーネント
+        - Grid
+            - map
+                - div
+                    - onClick
+                        - setUser
+                        - setUserDetailOpen
+                    - Grid item
+                        - Avatar
+                        - Typography
+                            - {user.name}
+            - Typography
+        - Dialog
+            - open
+                - userDetailOpen
+            - onClose
+                - setUserDetailOpen
+        - DialogContent
+            - Grid container
+                - Grid item
+                    - Avatar
+                        - src => user?.image.url
+            - Grid container
+                - Grid item
+                    - Typography
+                        - {user.name}
+                        - {userAge()}歳
+                        - ({userPrefecture()})
+                    - Typography
+                    - Typography
+                        - user.profile
+            - Grid container
+                - Button
+                    - onClick
+                        - isLikedUser(user.id)
+                    - isLikedUser(user.id)
+        - AlertMessage
+            - open
+                - alertMessageOpen
+            - setOpen
+                - setAlertMessageOpen
