useEffectでコンポーネントが表示されてからの処理を読む また、非推奨となっているメソッドを推奨されているメソッドに修正する（保守・点検）

--- a/機能毎のコードリーディング/マッチング機能.md
+++ b/機能毎のコードリーディング/マッチング機能.md
@@ -71,13 +71,34 @@
                                 - これらをJSON形式でシフト演算する
         - render
             - json形式でstatusコードが200、chat_roomsにはchat_roomsを格納して返す
-    - if文に条件としてresプロパティの値が200と厳密に等しいか判別する
-        - trueの場合
-            - setChatRoomsに対してres.data.chatRoomsを引数として渡しstateを更新する
-        - falseの場合
-            - コンソールへ"No chat rooms"を出力する
-    - catch構文
-        - コンソールへエラーを出力する
-    - setLoading
-        - 引数としてfalseを渡してstateを更新する
+    - FE
+        - if文に条件としてresプロパティの値が200と厳密に等しいか判別する
+            - trueの場合
+                - setChatRoomsに対してres.data.chatRoomsを引数として渡しstateを更新する
+            - falseの場合
+                - コンソールへ"No chat rooms"を出力する
+            - catch構文
+                - コンソールへエラーを出力する
+            - setLoading
+                - 引数としてfalseを渡してstateを更新する
+        - ChatRoomsコンポーネントの表示部分
+            - !loadingを三項演算子で条件分岐する
+                - trueの場合
+                    - 配列chatRoomsの長さが0よりも大きい場合
+                        - trueの場合
+                            - 配列chatRoomsに対してmap関数を実行する
+                                - Gridコンポーネント
+                                    - Listコンポーネント
+                                        - Link to
+                                            - path => `/chatroom/${chatRoom.chatRoom.id}`
+                                        - ListItem
+                                            - ListItemAvatar
+                                                - Avatar
+                                                    - src属性　＝＞　hatRoom.otherUser.image.url
+                                            - ListItemText
+                                                - primary
+                                                    - chatRoom.otherUser.name
+                                                - secondary
+                                                    - 変数chatRoomのlastMessageプロパティが厳密にnulか判定する
+                - falseの場合
 - チャット機能 => いいねした相手とのチャット機能 => ChatRoom
