コントローラーを読み切った バックエンドの責任領域をなんとなく把握できたかもしれないと思った

--- a/機能毎のコードリーディング/マッチング機能.md
+++ b/機能毎のコードリーディング/マッチング機能.md
@@ -99,6 +99,16 @@
                                                 - primary
                                                     - chatRoom.otherUser.name
                                                 - secondary
-                                                    - 変数chatRoomのlastMessageプロパティが厳密にnulか判定する
+                                                    - 変数chatRoomのlastMessageプロパティの値が厳密にnullか判定する
+                                                        - trueの場合
+                                                            - まだメッセージはありません。を表示
+                                                        - falseの場合
+                                                            - lengthメソッドの結果を取得する
+                                                    - さらに三項演算子を使い、
+                                                        - trueの場合には
+                                                            - 0~30を表示
+                                                        - falseの場合には
+                                                            - 全体を表示する
                 - falseの場合
+                    - マッチング中の相手はいません。を表示する
 - チャット機能 => いいねした相手とのチャット機能 => ChatRoom
